remove '<>' in email address when using click2search add option UI for saved search folder's place.

--- a/content/help.html
+++ b/content/help.html
@@ -200,6 +200,8 @@ virtual folder being persistent not only allows you to mark it as "Preferred" wi
 the setting being lost when restarting TB, but also you can edit the properties of the
 "ExpressionSearch" virtual folder to specify once for all which of your physical folders
 should be searched or not with a global non-faceted search (CTRL+Enter).</p>
+<p>Where "ExpressionSearch" is created can also be set in the option dialog, By default, it's
+the root folder of the current disaplyed folder</p>
 
 <h3>More complex searching</h3>
 <p>The quick search bar allows you use the simple expressions from above, but it also
