common.loadTab can accept object move "quick-filter-bar-main-bar" instead of individual buttons to avoid missing icons fix result label colors remove support for TB 3.1 in ExpressionSearchFilter.js

--- a/content/help.html
+++ b/content/help.html
@@ -266,10 +266,12 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 Version 0.8.4: <ul>
 <li>Added tonocc/bcc/cc/only/age search</li>
 <li>Added options for show verbose information</li>
+<li>Added options for where to create expression search folders</li>
 <li>Fixed '<>' in search pattern issue when use click2search</li>
 <li>Fixed search issue when use click2search and address is in address book</li>
 <li>Fixed hang issue when '\t' exists in search pattern</li>
 <li>Fixed minor bug that extension defined search terms show when search in address book</li>
+<li>Fixed one bug that icons for quick search may missing when move search buttons to menubar or toolbar</li>
 </ul>
 </li><li>
 Version 0.8.3: Fixed context menu missing issue when click right button.
