added options for quick filter button labels

--- a/content/help.html
+++ b/content/help.html
@@ -263,6 +263,10 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
+Version 0.8.5: <ul>
+<li>Added  options for show or hide text labels of 'quick filter' buttons</li>
+</ul>
+</li><li>
 Version 0.8.4: <ul>
 <li>Added tonocc/bcc/cc/only/age search</li>
 <li>Added options for show verbose information</li>
@@ -317,6 +321,8 @@ The "filename:" Search for filename/type in the attachment is experimental and m
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=224392'>Bug 224392</a> - Add ability to filter by attachment name (extension)
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=363238'>Bug 363238</a> - saved searches fail for searches on x-headers
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=546925'>Bug 546925</a> - custom header search is non-functional ('Run search on server' of Edit/Find/Search Messages doesn't work any more)
 </li><li>
