add status bar icon & tips fix stick issue add headerregex (not finished) (issue 2 5) add tag:na (issue 9) add status:star add newer_than/older_than and support today/yesterday/day/month/year (issue 6 & 10) export ExpressionSearchTokens add background for help.html (issue 11) fix crash issue when ctrl2search on headers

--- a/content/help.html
+++ b/content/help.html
@@ -4,6 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Expression Search</title>
 <style type="text/css">
+  body {
+    color: black;
+    background-color: white;
+  }
   #helpcontent {
     max-width: 1000px;
   }
