--- a/content/help.html
+++ b/content/help.html
@@ -11,8 +11,12 @@
   #helpcontent {
     max-width: 1000px;
   }
+  a {
+    color: blue;
+  }
   .notice {
     color: red;
+    font-weight: bold;
   }
   .bz_closed {
     text-decoration: line-through;
@@ -27,7 +31,7 @@ It's a modified version of GMailUI, written by Ken Mixter.</p>
 <p>
 Type "hello world" to search within the current view for this string in subject/from/to/cc.<br/>
 Type "from:fred to:tom attachment:yes" to see all messages from Fred to Tom in the current view that have an attachment.<br/>
-Press Ctrl+Enter to have this search apply to all folders.<br/>
+Press Ctrl+Enter to have this search apply to all folders through virtual folder.<br/>
 Press Shift+Enter to invoke Gloda Search in all indexed folders.<br/>
 Use Ctrl/Shift+Right Click to search the clicked subject/From/Recipient.<br/>
 </p>
@@ -114,7 +118,7 @@ Notice that it does not search for attachments named "yes".  You can also use "y
 
 <b>filename:foo.doc</b> or <b>fi:image</b> or <b>fn:msword</b> or <b>file:html</b>
 </p>
-<p>Experimental Feature, Use it with caution, better <span class='notice'>SAVE ALL DRAFTS</span> before using it, may crash Thunderbird.
+<p>Experimental Feature, Use it with caution, better <span class='notice'>SAVE ALL DRAFTS</span> before using it, may <span class='notice'>crash</span> Thunderbird.
 This expression searches all messages in the current folder or view for an attachment name or type. Case insensitive.
 If you just want to search messages that have attachement, use attachment:yes instead of using this one.
 </p></li><li><p>
@@ -165,7 +169,7 @@ things up considerably.
 
 <b>bodyre:/hello.*world/i</b> or <b>br:tb.*crash</b>
 </p>
-<p>Experimental Feature, Use it with caution, better <span class='notice'>SAVE ALL DRAFTS</span> before using it, may crash Thunderbird.
+<p>Experimental Feature, Use it with caution, better <span class='notice'>SAVE ALL DRAFTS</span> before using it, may <span class='notice'>crash</span> Thunderbird.
 This expression searches the body of all messages in the current folder or view. Case sensitive and should be the last pattern.
 Use 'body:' instead of 'bodyre:' when possible.
 </p></li><li><p>
@@ -195,8 +199,9 @@ fields, and the <i>body</i>.
 
 <h3>Hot Key</h3>
 <p>
-By default, Press Ctrl+F, your cursor will appear in the expression search bar or in the "search in message" bar, depend on where current focus is, and
-you will be able to type. See <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a>.</p>
+By default, Before TB8, Press Ctrl+F, your cursor will appear in the expression search bar or in the "search in message" bar, depend on where current focus is, and
+you will be able to type. See <span class="bz_closed"><a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a></span>.</p>
+<p>After TB8, the hot key was changed to "Ctrl+Shif+K".</p>
 <p>Expression Search add one additional hot key "Ctrl+B", this will only focus your cursor in the expression search bar.
 </p>
 <p>Once you are typing in your search query, and you hit enter or otherwise let
@@ -228,7 +233,7 @@ by editing properties, or can be renamed to make it a permanent virtual search f
 If you do not rename the folder, the next time you use ctrl-enter the ExpressionSearch 
 virtual folder is reused to show your new quick search result.</p>
 
-<a name='keep_saved_search'/>
+<a name='keep_saved_search'></a>
 <p>The option "<b>Keep selected folders for saved search</b>" to have the "ExpressionSearch"
 virtual folder being persistent not only allows you to mark it as "Preferred" without
 the setting being lost when restarting TB, but also you can edit the properties of the
@@ -236,6 +241,7 @@ the setting being lost when restarting TB, but also you can edit the properties 
 should be searched or not with a global non-faceted search (CTRL+Enter).</p>
 <p>Where "ExpressionSearch" is created can also be set in the option dialog, By default, it's
 the root folder of the current disaplyed folder</p>
+<p>You can back to original folder by press Ctrl+LEFT</p>
 
 <h3>More complex searching</h3>
 <p>The quick search bar allows you use the simple expressions from above, but it also
@@ -271,7 +277,11 @@ in your current search results, but maybe NOT in you search folder. as the searc
 and 'Match any' types.
 </p>
 <p>
-Note 2: In case you also using the normal search filter, the final results is logically "AND", that means
+Note 2: If you want search all folders using expression, you can create a virtual folder manually (Ctrl+Shift+F) with 'Match all messages',
+then using expression search in the virtual folder.
+</p>
+<p>
+Note 3: In case you also using the normal search filter, the final results is logically "AND", that means
 both filter are effective.
 </p>
 
@@ -282,7 +292,7 @@ recipient or subject.
 </p>
 <p>
 <a name="c2s_Replace"></a>
-For subject line, if provided regular expression match/replace patterns, the pattern will be first executed
+For subject line, if provided regular expression match/replace patterns and enabled the replace for corresponding key combo, the pattern will be first executed
 <pre>Replace subject before search.
 Multiple matches are ORed. Example:
     Match:   \[#(\d*)\]
@@ -299,6 +309,8 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <ul><li>
 Version 0.8.5: <ul>
 <li>Added options for show or hide text labels of 'quick filter' buttons</li>
+<li>Added options to seperate subject replacment for Ctrl/Shift+RightClick</li>
+<li>Added hotkey Ctrl+Left for back to original folder after Ctrl+Enter</li>
 <li>Added regex search for headers</li>
 <li>Added regex search for body(experimental, may crash)</li>
 <li>Added newer_than/older_than support</li>
@@ -361,6 +373,8 @@ Version 0.1: First version, changed from GMailUI to make it works for Thunderbir
 The "filename:" Search for filename/type in the attachment is experimental and may <span class='notice'>crash</span> your Thunderbird.
 </li><li>
 The "bodyre:" Search for regex in body is experimental and may <span class='notice'>crash</span> your Thunderbird.
+</li><li>
+Shift+RightClick May not work for some versions of Thunderbird.
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'><span class="bz_closed">Bug 124641</span></a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
 </li><li>
@@ -425,6 +439,8 @@ Tom Zhu - Suggest for Enter to focus message pane, and validations before releas
 <h3>Feedback, Suggestions, and on-going Development</h3>
 <p>Home Page: <a href='http://code.google.com/p/expression-search/'>expression-search</a>
 <p>Please send email to <a href='mailto:Opera.Wang+es@gmail.com'>Opera.Wang+es@gmail.com</a> for feedback, suggestions etc</p>
+<p><a href='https://twitter.com/operawang'>Twitter</a> or <a href='http://weibo.com/operawang'>Weibo</a></p>
+<p>&nbsp;</p>
 </div>
 </body>
 </html>
