Added options for load Saved Search folder in a new Tab

--- a/content/help.html
+++ b/content/help.html
@@ -310,6 +310,7 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 Version 0.8.5: <ul>
 <li>Added options for show or hide text labels of 'quick filter' buttons</li>
 <li>Added options to seperate subject replacment for Ctrl/Shift+RightClick</li>
+<li>Added options for load Saved Search folder in a new Tab</li>
 <li>Added hotkey Ctrl+Left for back to original folder after Ctrl+Enter</li>
 <li>Added regex search for headers</li>
 <li>Added regex search for body(experimental, may crash)</li>
