prevent context menu popup on MacOS when doing click2search add scrollbar to option dialog if possible

--- a/content/help.html
+++ b/content/help.html
@@ -320,9 +320,12 @@ Version 0.8.5: <ul>
 <li>Added today/yesterday/day/month/year for days search</li>
 <li>Added status bar icon & tips</li>
 <li>Added donate buttons</li>
+<li>Added scrollbar for option window when needed</li>
 <li>Fixed crash issue when ctrl2search on headers</li>
 <li>Fixed bugs for Ctrl+Enter launch gloda search when no messages found</li>
 <li>Fixed bugs for pined quick search buttons not work when switch between folders</li>
+<li>Fixed bugs for transparent background help page on Mac OS</li>
+<li>Fixed bugs for click2search triggers context menu on Mac OS</li>
 <li>Compatible with TB5~TB23</li>
 </ul>
 </li><li>
