doc update for 0.8.6

--- a/content/help.html
+++ b/content/help.html
@@ -307,6 +307,15 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
+Version 0.8.6: <ul>
+<li>getCellProperties API change for TB22</li>
+<li>Add options for tooltip show/hide time</li>
+<li>change the flexibility of other element to make my search box bigger</li>
+<li>Add "Re: " to subject if it's a reply email for subject regex search</li>
+<li>Add 'Select All', 'Clear All' & select mode when modify virtual folder's folders.</li>
+<li>Fix bug: Donate through palpay directly not working because I'm in China</li>
+</ul>
+</li><li>
 Version 0.8.5: <ul>
 <li>Added options for show or hide text labels of 'quick filter' buttons</li>
 <li>Added options to seperate subject replacment for Ctrl/Shift+RightClick</li>
