--- a/content/help.html
+++ b/content/help.html
@@ -116,6 +116,13 @@ in the <i>from</i> fields of the message.
 </p><p>This pattern must be the last pattern. Case <b>sensitive</b> unless you have //i.
 </p></li><li><p>
 
+<b>tore:/^begin/i</b> or <b>tr:end$</b>
+</p>
+<p>This expression searches all messages in the current folder or view with <a href='https://developer.mozilla.org/en/JavaScript/Guide/Regular_Expressions'>Regular Expressions</a>
+in the <i>recipients</i> fields of the message.
+</p><p>This pattern must be the last pattern. Case <b>sensitive</b> unless you have //i.
+</p></li><li><p>
+
 <b>attachment:yes</b> or <b>a:yes</b>
 </p>
 <p>This expression searches all messages in the current folder or view for an attachment,
@@ -316,7 +323,8 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <ul><li>
 Version 0.8.7: <ul>
 <li>Compatible with TB29 nightly</li>
-<li>Added regex search for from</li>
+<li>Added regex search for from/to</li>
+<li>Changed hotkey from Ctrl+Left to Ctrl+Alt+Left for back to original folder after Ctrl+Enter</li>
 </ul>
 </li><li>
 Version 0.8.6: <ul>
@@ -411,6 +419,8 @@ Shift+RightClick May not work for some versions of Thunderbird.
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=363238'><span class="bz_closed">Bug 363238</span></a> - saved searches fail for searches on x-headers
 </li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=522886'>Bug 522886</a> - Implement "Recipients" column that shows all recipients (To, CC, and BCC)
+</li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=546925'>Bug 546925</a> - custom header search is non-functional ('Run search on server' of Edit/Find/Search Messages doesn't work any more)
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'><span class="bz_closed">Bug 564328</span></a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
@@ -471,6 +481,7 @@ Tom Zhu - Suggest for Enter to focus message pane, and validations before releas
 <p>Home Page: <a href='http://code.google.com/p/expression-search/'>expression-search</a>
 <p>Please send email to <a href='mailto:Opera.Wang+es@gmail.com'>Opera.Wang+es@gmail.com</a> for feedback, suggestions etc</p>
 <p><a href='https://twitter.com/operawang'>Twitter</a> or <a href='http://weibo.com/operawang'>Weibo</a></p>
+<p>There will be NO Postbox support as it is based on too old Thunderbird codebase.</p>
 <p>&nbsp;</p>
 </div>
 </body>
