search display name won't work

--- a/content/help.html
+++ b/content/help.html
@@ -419,6 +419,8 @@ Shift+RightClick May not work for some versions of Thunderbird.
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=363238'><span class="bz_closed">Bug 363238</span></a> - saved searches fail for searches on x-headers
 </li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=460737'>Bug 460737</a> -  Quickfilter ignores searches for friendly display names from address book contacts, as displayed on message header and message list by default (no or incomplete results for From, To, CC, BCC)
+</li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=474730'><span class="bz_closed">Bug 474730</span></a> -  should search newest first - searching returns messages in bad order, making searches very time-consuming and irrelevant for large databases
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=522886'>Bug 522886</a> - Implement "Recipients" column that shows all recipients (To, CC, and BCC)
