Make it clear that tore is for To/Cc/Bcc

--- a/content/help.html
+++ b/content/help.html
@@ -123,7 +123,7 @@ in the <i>from</i> fields of the message.
 <b>tore:/^begin/i</b> or <b>tr:end$</b>
 </p>
 <p>This expression searches all messages in the current folder or view with <a href='https://developer.mozilla.org/en/JavaScript/Guide/Regular_Expressions'>Regular Expressions</a>
-in the <i>recipients</i> fields of the message.
+in the <i>recipients</i>(to/cc/bcc) fields of the message.
 </p><p>This pattern must be the last pattern. Case <b>sensitive</b> unless you have //i.
 </p></li><li><p>
 
