Fix issue for too tall help file.

--- a/content/help.html
+++ b/content/help.html
@@ -10,6 +10,7 @@
   }
   #helpcontent {
     max-width: 1000px;
+    max-height: 800px;
   }
   a {
     color: blue;
@@ -30,7 +31,7 @@
 
 <body>
 <div id=helpcontent>
-<p>Expression Search / GMailUI is an extension to Thunderbird (versions 21.0+) which add powerful message searching features.
+<p>Expression Search / GMailUI is an extension to Thunderbird (versions 31.0+) which add powerful message searching features.
 Init by Ken Mixter, Maintaining by Opera Wang.</p>
 <p>
 Type "hello world" to search within the current view for this string in subject/from/to/cc.<br/>
