Homepage Change to GitHub

--- a/content/help.html
+++ b/content/help.html
@@ -495,7 +495,7 @@ Tom Zhu - Suggest for Enter to focus message pane, and validations before releas
 </li></ul>
 
 <h3>Feedback, Suggestions, and on-going Development</h3>
-<p>Home Page: <a href='http://code.google.com/p/expression-search/'>expression-search</a>
+<p>Home Page: <a href='https://github.com/wangvisual/expression-search'>expression-search</a>
 <p>Please send email to <a href='mailto:Opera.Wang+es@gmail.com'>Opera.Wang+es@gmail.com</a> for feedback, suggestions etc</p>
 <p><a href='https://twitter.com/operawang'>Twitter</a> or <a href='http://weibo.com/operawang'>Weibo</a></p>
 <p>There will be NO Postbox support as it is based on too old Thunderbird codebase.</p>
