--- a/content/help.html
+++ b/content/help.html
@@ -325,11 +325,12 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <h3>Version history</h3>
 <ul><li>
 Version 0.9: <ul>
-<li>Compatible with TB38 nightly and drop support for TB version less than 31</li>
+<li>Compatible with TB40 nightly and drop support for TB version less than 31</li>
 <li>attachment search is fully supported and won't crash TB any more, for offline messages only.</li>
 <li>Add option to put the Expression Search field into the Tab bar</li>
 <li>Add option to (not) remove the domain name for click2search</li>
 <li>Add option to hide the quick search filter icons</li>
+<li>Looks better on OSX and Ubuntu</li>
 </ul>
 </li><li>
 Version 0.8.8: <ul>
