--- a/content/help.html
+++ b/content/help.html
@@ -324,6 +324,10 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
+Version 1.0: <ul>
+<li>Works with TB 45 nightly</li>
+</ul>
+</li><li>
 Version 0.9: <ul>
 <li>Compatible with TB40 nightly and drop support for TB version less than 31</li>
 <li>Attachment search is fully supported and won't crash TB any more, for offline messages only.</li>
