--- a/content/help.html
+++ b/content/help.html
@@ -324,6 +324,10 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
+Version 1.1: <ul>
+<li>Works with TB 56 nightly</li>
+</ul>
+</li><li>
 Version 1.0: <ul>
 <li>Works with TB 45 nightly</li>
 </ul>
@@ -481,6 +485,8 @@ savo_msu - Author of <a href='https://addons.mozilla.org/af/thunderbird/addon/on
 Kent James - Author of <a href='https://addons.mozilla.org/en-US/thunderbird/addon/filtaquilla/'>FiltaQuilla</a>
 </li><li>
 Jiten Dedhia - Suggest for 'toonly' search
+</li><li>
+Jonathan Kamens - Patch for TB56 support
 </li><li>
 Greg Cowan - Suggest for date search
 </li><li>
